[package]
name = "arena_gungeon"
version = "0.1.0"
authors = ["Redfox <vitor_pereira.2013@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
macroquad-tiled = "0.1"
macroquad-platformer = "0.1.1"
rand = "0.8.3"
